syntax = "proto3";

package mail;

option go_package="./pkg/pb/";

service MailService{
    rpc SendMail (SendMailRequest) returns (SendMailResponse){}
}

message SendMailRequest{
    string userID = 1;
    string email =2;
}

message SendMailResponse {
    string mailCount = 2;
}